--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -107,9 +107,9 @@ footer {
     background: rgba(255,255,255,0.9);
 }
 
-footer p {
+footer {
     margin: 0;
-    padding: 50px 0;
+    padding: 40px;
 }
 
 @media screen and (min-width:768px) {
